# zerobase-eda

./: pyproject.toml  readme.md
src/: readme.md
src/eda-base-1/: [DS]eda1_parksangwoo.ipynb  starbucks_ediya.csv
src/eda-test-1/: [DS]edatest_yourname.ipynb
src/eda-test-2/datas/: cosmetics.xlsx
