[tool.poetry]
name = "zero-base-submit"
version = "0.1.0"
description = ""
authors = ["John Park <john.sw.park.00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
seaborn = "^0.13.2"
selenium = "^4.18.1"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
geopy = "^2.4.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
